# embedded-debug-tools

./: .gitignore  .gitmodules  .mailmap  CHANGELOG.md  LICENSE  README.md  emdbg.html  index.html  pyproject.toml  search.js
emdbg/: bench.html  (+8 more)
ext/orbetto/: README.md  display.py  elf.py  irq_names.py  loadelf.c  loadelf.h  meson.build  metrics.py  orbethon.cpp  orbethon.py  orbetto.cpp  protocol_synchronize.py  queries.py  signal_processor.py  spi_decode.py
ext/orbetto/metrics/: METRICS.md  display.py  elfFileDecode.py  metrics.py  metrics.yml  queries.py
ext/orbetto/src/: LRUCache.hpp  TRACE.md  device.cpp  device.hpp  mortrall.hpp  orbetto.cpp
ext/orbetto/subprojects/: croaring.wrap  orbuculum.wrap  perfetto.wrap  proto.sh
ext/orbetto/subprojects/perfetto/: meson.build  proto.sh
ext/orbetto/subprojects/perfetto/protos/perfetto/common/: android_energy_consumer_descriptor.pb.cc  android_energy_consumer_descriptor.pb.h  android_log_constants.pb.cc  android_log_constants.pb.h  builtin_clock.pb.cc  builtin_clock.pb.h  descriptor.pb.cc  descriptor.pb.h  gpu_counter_descriptor.pb.cc  gpu_counter_descriptor.pb.h  perf_events.pb.cc  perf_events.pb.h  sys_stats_counters.pb.cc  sys_stats_counters.pb.h  trace_stats.pb.cc  trace_stats.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/config/: data_source_config.pb.cc  data_source_config.pb.h  interceptor_config.pb.cc  interceptor_config.pb.h  test_config.pb.cc  test_config.pb.h  trace_config.pb.cc  trace_config.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/config/android/: android_game_intervention_list_config.pb.cc  android_game_intervention_list_config.pb.h  android_log_config.pb.cc  android_log_config.pb.h  android_polled_state_config.pb.cc  android_polled_state_config.pb.h  android_system_property_config.pb.cc  android_system_property_config.pb.h  network_trace_config.pb.cc  network_trace_config.pb.h  packages_list_config.pb.cc  packages_list_config.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/config/chrome/: chrome_config.pb.cc  chrome_config.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/config/ftrace/: ftrace_config.pb.cc  ftrace_config.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/config/gpu/: gpu_counter_config.pb.cc  gpu_counter_config.pb.h  vulkan_memory_config.pb.cc  vulkan_memory_config.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/config/inode_file/: inode_file_config.pb.cc  inode_file_config.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/config/interceptors/: console_config.pb.cc  console_config.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/config/power/: android_power_config.pb.cc  android_power_config.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/config/process_stats/: process_stats_config.pb.cc  process_stats_config.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/config/profiling/: heapprofd_config.pb.cc  heapprofd_config.pb.h  java_hprof_config.pb.cc  java_hprof_config.pb.h  perf_event_config.pb.cc  perf_event_config.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/config/statsd/: atom_ids.pb.cc  atom_ids.pb.h  statsd_tracing_config.pb.cc  statsd_tracing_config.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/config/sys_stats/: sys_stats_config.pb.cc  sys_stats_config.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/config/system_info/: system_info.pb.cc  system_info.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/config/track_event/: track_event_config.pb.cc  track_event_config.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/trace/: clock_snapshot.pb.cc  clock_snapshot.pb.h  extension_descriptor.pb.cc  extension_descriptor.pb.h  memory_graph.pb.cc  memory_graph.pb.h  system_info.pb.cc  system_info.pb.h  test_event.pb.cc  test_event.pb.h  trace.pb.cc  trace.pb.h  trace_packet.pb.cc  trace_packet.pb.h  trace_packet_defaults.pb.cc  trace_packet_defaults.pb.h  trace_uuid.pb.cc  trace_uuid.pb.h  trigger.pb.cc  trigger.pb.h  ui_state.pb.cc  ui_state.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/trace/android/: android_game_intervention_list.pb.cc  android_game_intervention_list.pb.h  android_log.pb.cc  android_log.pb.h  android_system_property.pb.cc  android_system_property.pb.h  camera_event.pb.cc  camera_event.pb.h  frame_timeline_event.pb.cc  frame_timeline_event.pb.h  gpu_mem_event.pb.cc  gpu_mem_event.pb.h  graphics_frame_event.pb.cc  graphics_frame_event.pb.h  initial_display_state.pb.cc  initial_display_state.pb.h  network_trace.pb.cc  network_trace.pb.h  packages_list.pb.cc  packages_list.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/trace/chrome/: chrome_benchmark_metadata.pb.cc  chrome_benchmark_metadata.pb.h  chrome_metadata.pb.cc  chrome_metadata.pb.h  chrome_trace_event.pb.cc  chrome_trace_event.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/trace/filesystem/: inode_file_map.pb.cc  inode_file_map.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/trace/ftrace/: android_fs.pb.cc  android_fs.pb.h  binder.pb.cc  binder.pb.h  block.pb.cc  block.pb.h  cgroup.pb.cc  cgroup.pb.h  clk.pb.cc  clk.pb.h  cma.pb.cc  cma.pb.h  compaction.pb.cc  compaction.pb.h  cpuhp.pb.cc  cpuhp.pb.h  cros_ec.pb.cc  cros_ec.pb.h  dma_fence.pb.cc  dma_fence.pb.h  dmabuf_heap.pb.cc  dmabuf_heap.pb.h  dpu.pb.cc  dpu.pb.h  drm.pb.cc  drm.pb.h  ext4.pb.cc  ext4.pb.h  f2fs.pb.cc  f2fs.pb.h  fastrpc.pb.cc  fastrpc.pb.h  fence.pb.cc  fence.pb.h  filemap.pb.cc  filemap.pb.h  ftrace.pb.cc  ftrace.pb.h  ftrace_event.pb.cc  ftrace_event.pb.h  (+88 more)
ext/orbetto/subprojects/perfetto/protos/perfetto/trace/gpu/: gpu_counter_event.pb.cc  gpu_counter_event.pb.h  gpu_log.pb.cc  gpu_log.pb.h  gpu_render_stage_event.pb.cc  gpu_render_stage_event.pb.h  vulkan_api_event.pb.cc  vulkan_api_event.pb.h  vulkan_memory_event.pb.cc  vulkan_memory_event.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/trace/interned_data/: interned_data.pb.cc  interned_data.pb.h
ext/orbetto/subprojects/perfetto/protos/perfetto/trace/perfetto/: perfetto_metatrace.pb.cc  (+3 more)
scripts/arm_disarm_stresstest/: CMakeLists.txt
(+235 files in other folders)
