[build-system]
requires = [ "setuptools>=41", "wheel", "setuptools-git-versioning<2", ]
build-backend = "setuptools.build_meta"

[project]
name = "emdbg"
authors = [
    {name = "Auterion", email = "success@auterion.com"},
]
description = "Embedded Debug Tools"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["embedded", "debug", "gdb", "stm32", "px4"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Hardware",
    "Topic :: System :: Operating System",
    "Topic :: System :: Operating System Kernels",
]
dependencies = [
    "pyserial>=3.5,<4",
    "graphviz>=0.20.1,<0.21",
    "pygdbmi>=0.11.0.0,<0.12",
    "cmsis-svd==0.4",
    "arm-gdb>=0.9.9,<1",
    "pydwf>=1.1.19,<2",
    "yoctopuce>=1.10.57762,<2.0",
    "rpyc>=5.3.1,<6",
    "rich>=13.7.0,<14",
]
dynamic = ["version"]

[project.urls]
"GitHub" = "https://github.com/auterion/embedded-debug-tools"
"Changelog" = "https://github.com/auterion/embedded-debug-tools/blob/main/CHANGELOG.md"

[project.optional-dependencies]
all = ["pdoc"]
# Make our specific hardware drivers optional too?
# digilent = ["pydwf"]
# yocto = ["yoctopuce"]
# rpyc = ["rpyc"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
emdbg = ["*.md", "*/*.md", "*/*/*.md", "*/*/*/*.md"]
"emdbg.patch.data" = ["*"]
"emdbg.bench.data" = ["*"]
"emdbg.debug.data" = ["*"]

[tool.setuptools]
# GDB expects plain text config files!
zip-safe = false

[tool.setuptools-git-versioning]
enabled = true
version_file = "VERSION"
