project('perfetto', 'cpp', default_options: ['cpp_std=c++20'])

proto_srcs = [
    'protos/perfetto/trace/power/power_rails.pb.cc',
    'protos/perfetto/trace/power/android_entity_state_residency.pb.cc',
    'protos/perfetto/trace/power/android_energy_estimation_breakdown.pb.cc',
    'protos/perfetto/trace/power/battery_counters.pb.cc',
    'protos/perfetto/trace/sys_stats/sys_stats.pb.cc',
    'protos/perfetto/trace/test_event.pb.cc',
    'protos/perfetto/trace/system_info.pb.cc',
    'protos/perfetto/trace/gpu/gpu_counter_event.pb.cc',
    'protos/perfetto/trace/gpu/vulkan_memory_event.pb.cc',
    'protos/perfetto/trace/gpu/gpu_log.pb.cc',
    'protos/perfetto/trace/gpu/vulkan_api_event.pb.cc',
    'protos/perfetto/trace/gpu/gpu_render_stage_event.pb.cc',
    'protos/perfetto/trace/perfetto/tracing_service_event.pb.cc',
    'protos/perfetto/trace/perfetto/perfetto_metatrace.pb.cc',
    'protos/perfetto/trace/memory_graph.pb.cc',
    'protos/perfetto/trace/translation/translation_table.pb.cc',
    'protos/perfetto/trace/trigger.pb.cc',
    'protos/perfetto/trace/interned_data/interned_data.pb.cc',
    'protos/perfetto/trace/filesystem/inode_file_map.pb.cc',
    'protos/perfetto/trace/ui_state.pb.cc',
    'protos/perfetto/trace/statsd/statsd_atom.pb.cc',
    'protos/perfetto/trace/trace_packet_defaults.pb.cc',
    'protos/perfetto/trace/trace_uuid.pb.cc',
    'protos/perfetto/trace/ps/process_tree.pb.cc',
    'protos/perfetto/trace/ps/process_stats.pb.cc',
    'protos/perfetto/trace/system_info/cpu_info.pb.cc',
    'protos/perfetto/trace/profiling/profile_packet.pb.cc',
    'protos/perfetto/trace/profiling/deobfuscation.pb.cc',
    'protos/perfetto/trace/profiling/smaps.pb.cc',
    'protos/perfetto/trace/profiling/heap_graph.pb.cc',
    'protos/perfetto/trace/profiling/profile_common.pb.cc',
    'protos/perfetto/trace/android/android_log.pb.cc',
    'protos/perfetto/trace/android/network_trace.pb.cc',
    'protos/perfetto/trace/android/initial_display_state.pb.cc',
    'protos/perfetto/trace/android/android_game_intervention_list.pb.cc',
    'protos/perfetto/trace/android/android_system_property.pb.cc',
    'protos/perfetto/trace/android/packages_list.pb.cc',
    'protos/perfetto/trace/android/gpu_mem_event.pb.cc',
    'protos/perfetto/trace/android/camera_event.pb.cc',
    'protos/perfetto/trace/android/frame_timeline_event.pb.cc',
    'protos/perfetto/trace/android/graphics_frame_event.pb.cc',
    'protos/perfetto/trace/chrome/chrome_metadata.pb.cc',
    'protos/perfetto/trace/chrome/chrome_benchmark_metadata.pb.cc',
    'protos/perfetto/trace/chrome/chrome_trace_event.pb.cc',
    'protos/perfetto/trace/clock_snapshot.pb.cc',
    'protos/perfetto/trace/trace.pb.cc',
    'protos/perfetto/trace/ftrace/skb.pb.cc',
    'protos/perfetto/trace/ftrace/lowmemorykiller.pb.cc',
    'protos/perfetto/trace/ftrace/v4l2.pb.cc',
    'protos/perfetto/trace/ftrace/ftrace_event.pb.cc',
    'protos/perfetto/trace/ftrace/ftrace_event_bundle.pb.cc',
    'protos/perfetto/trace/ftrace/binder.pb.cc',
    'protos/perfetto/trace/ftrace/trusty.pb.cc',
    'protos/perfetto/trace/ftrace/gpu_scheduler.pb.cc',
    'protos/perfetto/trace/ftrace/block.pb.cc',
    'protos/perfetto/trace/ftrace/fastrpc.pb.cc',
    'protos/perfetto/trace/ftrace/sync.pb.cc',
    'protos/perfetto/trace/ftrace/panel.pb.cc',
    'protos/perfetto/trace/ftrace/mali.pb.cc',
    'protos/perfetto/trace/ftrace/sock.pb.cc',
    'protos/perfetto/trace/ftrace/ion.pb.cc',
    'protos/perfetto/trace/ftrace/i2c.pb.cc',
    'protos/perfetto/trace/ftrace/dpu.pb.cc',
    'protos/perfetto/trace/ftrace/sched.pb.cc',
    'protos/perfetto/trace/ftrace/drm.pb.cc',
    'protos/perfetto/trace/ftrace/mdss.pb.cc',
    'protos/perfetto/trace/ftrace/systrace.pb.cc',
    'protos/perfetto/trace/ftrace/hyp.pb.cc',
    'protos/perfetto/trace/ftrace/cros_ec.pb.cc',
    'protos/perfetto/trace/ftrace/tcp.pb.cc',
    'protos/perfetto/trace/ftrace/power.pb.cc',
    'protos/perfetto/trace/ftrace/f2fs.pb.cc',
    'protos/perfetto/trace/ftrace/kmem.pb.cc',
    'protos/perfetto/trace/ftrace/ext4.pb.cc',
    'protos/perfetto/trace/ftrace/virtio_gpu.pb.cc',
    'protos/perfetto/trace/ftrace/android_fs.pb.cc',
    'protos/perfetto/trace/ftrace/regulator.pb.cc',
    'protos/perfetto/trace/ftrace/gpu_mem.pb.cc',
    'protos/perfetto/trace/ftrace/compaction.pb.cc',
    'protos/perfetto/trace/ftrace/ipi.pb.cc',
    'protos/perfetto/trace/ftrace/cpuhp.pb.cc',
    'protos/perfetto/trace/ftrace/kvm.pb.cc',
    'protos/perfetto/trace/ftrace/thermal.pb.cc',
    'protos/perfetto/trace/ftrace/generic.pb.cc',
    'protos/perfetto/trace/ftrace/task.pb.cc',
    'protos/perfetto/trace/ftrace/ftrace.pb.cc',
    'protos/perfetto/trace/ftrace/dma_fence.pb.cc',
    'protos/perfetto/trace/ftrace/signal.pb.cc',
    'protos/perfetto/trace/ftrace/workqueue.pb.cc',
    'protos/perfetto/trace/ftrace/clk.pb.cc',
    'protos/perfetto/trace/ftrace/printk.pb.cc',
    'protos/perfetto/trace/ftrace/mm_event.pb.cc',
    'protos/perfetto/trace/ftrace/net.pb.cc',
    'protos/perfetto/trace/ftrace/dmabuf_heap.pb.cc',
    'protos/perfetto/trace/ftrace/oom.pb.cc',
    'protos/perfetto/trace/ftrace/g2d.pb.cc',
    'protos/perfetto/trace/ftrace/vmscan.pb.cc',
    'protos/perfetto/trace/ftrace/lwis.pb.cc',
    'protos/perfetto/trace/ftrace/sde.pb.cc',
    'protos/perfetto/trace/ftrace/scm.pb.cc',
    'protos/perfetto/trace/ftrace/raw_syscalls.pb.cc',
    'protos/perfetto/trace/ftrace/cgroup.pb.cc',
    'protos/perfetto/trace/ftrace/ufs.pb.cc',
    'protos/perfetto/trace/ftrace/cma.pb.cc',
    'protos/perfetto/trace/ftrace/irq.pb.cc',
    'protos/perfetto/trace/ftrace/fence.pb.cc',
    'protos/perfetto/trace/ftrace/synthetic.pb.cc',
    'protos/perfetto/trace/ftrace/filemap.pb.cc',
    'protos/perfetto/trace/ftrace/ftrace_stats.pb.cc',
    'protos/perfetto/trace/ftrace/virtio_video.pb.cc',
    'protos/perfetto/trace/trace_packet.pb.cc',
    'protos/perfetto/trace/track_event/chrome_mojo_event_info.pb.cc',
    'protos/perfetto/trace/track_event/chrome_thread_descriptor.pb.cc',
    'protos/perfetto/trace/track_event/chrome_latency_info.pb.cc',
    'protos/perfetto/trace/track_event/range_of_interest.pb.cc',
    'protos/perfetto/trace/track_event/source_location.pb.cc',
    'protos/perfetto/trace/track_event/chrome_user_event.pb.cc',
    'protos/perfetto/trace/track_event/chrome_histogram_sample.pb.cc',
    'protos/perfetto/trace/track_event/chrome_application_state_info.pb.cc',
    'protos/perfetto/trace/track_event/chrome_process_descriptor.pb.cc',
    'protos/perfetto/trace/track_event/chrome_frame_reporter.pb.cc',
    'protos/perfetto/trace/track_event/chrome_legacy_ipc.pb.cc',
    'protos/perfetto/trace/track_event/track_descriptor.pb.cc',
    'protos/perfetto/trace/track_event/log_message.pb.cc',
    'protos/perfetto/trace/track_event/chrome_window_handle_event_info.pb.cc',
    'protos/perfetto/trace/track_event/chrome_renderer_scheduler_state.pb.cc',
    'protos/perfetto/trace/track_event/counter_descriptor.pb.cc',
    'protos/perfetto/trace/track_event/process_descriptor.pb.cc',
    'protos/perfetto/trace/track_event/task_execution.pb.cc',
    'protos/perfetto/trace/track_event/debug_annotation.pb.cc',
    'protos/perfetto/trace/track_event/chrome_compositor_scheduler_state.pb.cc',
    'protos/perfetto/trace/track_event/chrome_message_pump.pb.cc',
    'protos/perfetto/trace/track_event/thread_descriptor.pb.cc',
    'protos/perfetto/trace/track_event/track_event.pb.cc',
    'protos/perfetto/trace/track_event/chrome_active_processes.pb.cc',
    'protos/perfetto/trace/track_event/chrome_keyed_service.pb.cc',
    'protos/perfetto/trace/track_event/chrome_content_settings_event_info.pb.cc',
    'protos/perfetto/trace/extension_descriptor.pb.cc',
    'protos/perfetto/config/power/android_power_config.pb.cc',
    'protos/perfetto/config/sys_stats/sys_stats_config.pb.cc',
    'protos/perfetto/config/interceptors/console_config.pb.cc',
    'protos/perfetto/config/inode_file/inode_file_config.pb.cc',
    'protos/perfetto/config/trace_config.pb.cc',
    'protos/perfetto/config/gpu/gpu_counter_config.pb.cc',
    'protos/perfetto/config/gpu/vulkan_memory_config.pb.cc',
    'protos/perfetto/config/interceptor_config.pb.cc',
    'protos/perfetto/config/data_source_config.pb.cc',
    'protos/perfetto/config/statsd/statsd_tracing_config.pb.cc',
    'protos/perfetto/config/statsd/atom_ids.pb.cc',
    'protos/perfetto/config/system_info/system_info.pb.cc',
    'protos/perfetto/config/profiling/java_hprof_config.pb.cc',
    'protos/perfetto/config/profiling/heapprofd_config.pb.cc',
    'protos/perfetto/config/profiling/perf_event_config.pb.cc',
    'protos/perfetto/config/test_config.pb.cc',
    'protos/perfetto/config/android/network_trace_config.pb.cc',
    'protos/perfetto/config/android/android_game_intervention_list_config.pb.cc',
    'protos/perfetto/config/android/android_polled_state_config.pb.cc',
    'protos/perfetto/config/android/android_system_property_config.pb.cc',
    'protos/perfetto/config/android/packages_list_config.pb.cc',
    'protos/perfetto/config/android/android_log_config.pb.cc',
    'protos/perfetto/config/chrome/chrome_config.pb.cc',
    'protos/perfetto/config/ftrace/ftrace_config.pb.cc',
    'protos/perfetto/config/process_stats/process_stats_config.pb.cc',
    'protos/perfetto/config/track_event/track_event_config.pb.cc',
    'protos/perfetto/common/descriptor.pb.cc',
    'protos/perfetto/common/perf_events.pb.cc',
    'protos/perfetto/common/builtin_clock.pb.cc',
    'protos/perfetto/common/android_log_constants.pb.cc',
    'protos/perfetto/common/sys_stats_counters.pb.cc',
    'protos/perfetto/common/trace_stats.pb.cc',
    'protos/perfetto/common/android_energy_consumer_descriptor.pb.cc',
    'protos/perfetto/common/gpu_counter_descriptor.pb.cc',
]

libperfetto_protos = library('perfetto_protos',
    sources: proto_srcs,
    include_directories: include_directories(['.']),
    dependencies: [dependency('protobuf')],
    soversion: 0,
    install: true,
)
